--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing
-new_post_name: :title.md # File name of new posts
+# Writing  官网：https://hexo.io/zh-cn/docs/writing.html
+new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
