--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ baidushare: true
 #打赏功能
 #reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
 #wechatpay: /path/to/wechat-reward-image（二维码网址）
-#alipay: /path/to/alipay-reward-image
+#alipay: http://ofyfogrgx.bkt.clouddn.com/%E6%94%AF%E4%BB%98%E5%AE%9D%E6%94%B6%E6%AC%BE.jpg
 
 #站点建立时间
 since: 2016
