--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ deploy:
 # Disqus #Disqus评论系统
 disqus_shortname: leolan
 
-#plugins: #插件，例如生成 RSS 和站点地图的
+plugins: #插件，例如生成 RSS 和站点地图的
 #- hexo-generator-feed
 #- hexo-generator-sitemap
 
