--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Leo Lan的博客
-subtitle:  有时候正是不报期望的人做出了人们不敢期望的事！
+subtitle:  有时候正是不报期望的人做出了人们不敢期望之事！
 description: Better late than never
 author: Leo Lan
 language: zh-Hans
@@ -12,8 +12,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://leolan.top
-coding_url: http://leolan.top
+url: https://myleolan.github.io/blog
+coding_url: http://leolan.coding.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -72,7 +72,7 @@ theme: next
 #不管是github还是coding，type都填写git
 deploy:
 - type: git
-  repo: git@git.coding.net:leolan/leolan.git,master
+  repo: git@git.coding.net:leolan/blog.git,master
 - type: git
   repo: git@github.com:MyLeoLan/blog.git,master
 #deploy:
