--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://myleolan.github.io/blog
-coding_url: http://leolan.coding.me
+url: https://www.leolan.top
+coding_url: https://www.leolan.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
