--- a/themes/next5.1/_config.yml
+++ b/themes/next5.1/_config.yml
@@ -6,7 +6,7 @@
 favicon: /200.png
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo, NexT"
+keywords: "Hexo, NexT, Leo Lan, leolan, Docker, Blog, Node.js, Git, PHP, JAVA, JAVASCRIPT, HTML, CSS, jQuery, Ruby, jekyll, lvm, github, coding, vpn, linux, centos, ubuntu, zabbix, mysql"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -33,6 +33,7 @@ menu:
   tags: /tags
   archives: /archives
   about: /about
+  guestbook: /guestbook
  # schedule: /schedule
   #commonweal: /404.html
 
@@ -52,6 +53,7 @@ menu_icons:
   tags: tags
   archives: archive
   commonweal: heartbeat
+  guestbook: commenting
 
 
 
@@ -316,19 +318,19 @@ leancloud_visitors:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 #busuanzi_count:
   # count values only if the other configs are false
-#  enable: false
+#  enable: true
   # custom uv span for the whole site
 #  site_uv: true
-#  site_uv_header: <i class="fa fa-user"></i>
-#  site_uv_footer:
+#  site_uv_header: 你是第
+#  site_uv_footer: 个小伙伴
   # custom pv span for the whole site
 #  site_pv: true
-#  site_pv_header: <i class="fa fa-eye"></i>
-#  site_pv_footer:
+#  site_pv_header: 本站总浏览
+#  site_pv_footer: 次
   # custom pv span for one page only
 #  page_pv: true
-#  page_pv_header: <i class="fa fa-file-o"></i>
-#  page_pv_footer:
+#  page_pv_header: 热度
+#  page_pv_footer: ℃
 
 # Tencent analytics ID
 # tencent_analytics:
