--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,6 @@ root: /
 permalink: posts/:abbrlink/
 permalink_defaults:
 
-# abbrlink config
-abbrlink:
-  alg: crc16  # 算法：crc16(default) and crc32 
-  rep: dec    # 进制：dec(default) and hex
-
 # Directory
 source_dir: source
 public_dir: public
@@ -44,10 +39,15 @@ skip_render:
 include:
   - .nojekyll
 
-baidu_url_submit:
+# abbrlink config 生成文章永久链接（利于SEO）需要安装插件
+abbrlink:
+  alg: crc16  # 算法：crc16(default) and crc32 
+  rep: dec    # 进制：dec(default) and hex
+
+baidu_url_submit:  #百度链接推送，推送刚刚生成的永久链接
   count: 5 ## 比如3，代表提交最新的三个链接
   host: www.leolan.top ## 在百度站长平台中注册的域名
-  token: http://data.zz.baidu.com/urls?site=www.leolan.top&token=kZ5xboXBFPxQ0g7N ## 请注意这是您的秘钥， 请不要发布在公众仓库里!
+  token: kZ5xboXBFPxQ0g7N ## 请注意这是您的秘钥， 请不要发布在公众仓库里!
   path: /baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
 
@@ -79,7 +79,7 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
-# Pagination
+# Pagination  单独页面文章数目，需要安装插件
 ## Set per_page to 0 to disable pagination
 index_generator:
   per_page: 5
@@ -94,21 +94,21 @@ tag_generator:
 
 pagination_dir: page
 
-# Extensions
+# Extensions 主题选择
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next5.1
 #theme: next0.4
 
 
-# Deployment部署
+# Deployment 自动部署到仓库
 ## 官方文档Docs: https://hexo.io/docs/deployment.html   有部署到各种服务器的方法
 ## 参考：http://www.lxway.com/240950852.htm
 #不管是github还是coding，type都填写git
 deploy:
 - type: git
   repo: git@git.coding.net:leolan/blog.git,master
-  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
+  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'  #这个是commit的说明，因为是发布站点，方便看到发布时间。
 - type: git
   repo: git@github.com:MyLeoLan/blog.git,master
   message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
@@ -138,7 +138,7 @@ baidusitemap:
   baidupath: baidusitemap.xml
 
 
-# Social links
+# Social links 社交链接
 social:
   GitHub: https://github.com/myleolan
   Coding: https://coding.net/u/leolan
@@ -156,7 +156,6 @@ duoshuo_hotartical: true
 duoshuo_share: true
 # 百度分享服务
 baidushare: true
-
 
 #打赏功能
 reward_comment: 您的支持将鼓励我继续创作,非常感谢！
