--- a/themes/next5.1/_config.yml
+++ b/themes/next5.1/_config.yml
@@ -38,7 +38,7 @@ menu:
   #commonweal: /404.html
 
 
-# Enable/Disable menu icons.
+# Enable/Disable menu icons.  菜单图标
 # Icon Mapping:
 #   Map a menu item to a specific FontAwesome icon name.
 #   Key is the name of menu item and value is the name of FontAwsome icon. Key is case-senstive.
@@ -116,18 +116,15 @@ font:
 
 
 
-
 # ---------------------------------------------------------------
 # Sidebar Settings
 # ---------------------------------------------------------------
 
-
-# Social Links
+# Social Links 社交链接
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 #social:
 #LinkLabel: Link
-
 
 # Social Links Icons
 # Icon Mapping:
@@ -169,7 +166,7 @@ sidebar:
   position: left
   #position: right
 
-  # Sidebar Display, available value:
+  # Sidebar Display, available value: 侧边栏显示
   #  - post    expand on posts automatically. Default.
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
@@ -180,7 +177,7 @@ sidebar:
   #display: remove
 
 
-# Blogrolls
+# Blogrolls 友情链接
 #links_title: Links
 #links_layout: block
 #links_layout: inline
@@ -220,7 +217,7 @@ auto_excerpt:
   length: 150
 
 
-# Wechat Subscriber
+# Wechat Subscriber 微信打赏
 #wechat_subscriber:
   #enabled: true
   #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
@@ -233,12 +230,12 @@ auto_excerpt:
 # Third Party Services Settings
 # ---------------------------------------------------------------
 
-# MathJax Support
+# MathJax Support 数学公式
 mathjax:
   enable: false
   cdn: //cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
-
+#各种第三方服务
 # Swiftype Search API Key
 #swiftype_key:
 
@@ -259,12 +256,12 @@ mathjax:
 ##  type: button
 
 # Share
-jiathis: true
+#jiathis: true
 # Warning: JiaThis does not support https.
 #add_this_id:
 
 # Share
-#duoshuo_share: true
+duoshuo_share: true
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
@@ -283,9 +280,9 @@ jiathis: true
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
   ua_enable: true
-  admin_enable: false
-  user_id: 0
-  #admin_nickname: Author
+  admin_enable: ture
+  user_id: 6343395544286626562
+  admin_nickname: 博主
 
 
 # Facebook SDK Support.
@@ -314,7 +311,7 @@ leancloud_visitors:
   app_id: zieuxKa4IjAP6VgxxvBe4vkj-gzGzoHsz
   app_key: MHGN54IEuofFNV1AROiRkEoG
 
-# Show PV/UV of the website/page with busuanzi.
+# Show PV/UV of the website/page with busuanzi. 不算子网站访问量统计
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 #busuanzi_count:
   # count values only if the other configs are false
@@ -375,7 +372,7 @@ fancybox: true
 # Be aware that you should use the same version as internal ones to avoid potential problems.
 # Please use the https protocol of CDN files when you enable https on your site.
 vendors:
-  # Internal path prefix. Please do not edit it.
+  # Internal path prefix. Please do not edit it. 5.0以下版本如果打开网页空白，就把vendors文件夹改名为lib,这里对应改。
   _internal: lib
 
   # Internal version: 2.1.3
@@ -419,4 +416,4 @@ js: js
 images: images
 
 # Theme version
-version: 5.0.2
+version: 5.1.0
