修改主题配置

--- a/themes/next5.0.1/_config.yml
+++ b/themes/next5.0.1/_config.yml
@@ -187,8 +187,10 @@ links_icon: heartbeat
 #links_layout: inline
 links:
   Jerry Locke: https://jerry.hk/
-  Raintons: http://login926.top 
+  Raintons: http://login926.top
+  Jing's Blog: http://www.iamlj.com/
   E-Loli: https://haiwx.github.io/
+  cyang's blog: http://cyang.tech/
   小黑: http://mblack.cn/
 
 
