--- a/themes/next5.0.1/_config.yml
+++ b/themes/next5.0.1/_config.yml
@@ -193,7 +193,9 @@ links:
   Jing's Blog: http://www.iamlj.com/
   E-Loli: https://haiwx.github.io/
   cyang's blog: http://cyang.tech/
-  卢松松: http://lusongsong.com/
+  DIYgod: https://www.anotherhome.net
+  卢松松的博客: http://lusongsong.com/
+  松松视频: http://v.lusongsong.com/
   小黑: http://mblack.cn/
 
 
