--- a/themes/next5.0.1/_config.yml
+++ b/themes/next5.0.1/_config.yml
@@ -197,7 +197,7 @@ links:
   卢松松的博客: http://lusongsong.com/
   松松视频: http://v.lusongsong.com/
   小黑: http://mblack.cn/
-
+  一路向北: http://www.showerlee.com/
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
