修复诸多问题

--- a/themes/next5.0.1/_config.yml
+++ b/themes/next5.0.1/_config.yml
@@ -140,7 +140,7 @@ social_icons:    #http://fontawesome.io/icons/
   Coding: github-alt
   Cloud: cloud
   OSchina: git-square
-  松松视频: video-camera
+  #松松视频: video-camera
   #Twitter: twitter
   #Weibo: weibo
 
