--- a/_config.yml
+++ b/_config.yml
@@ -154,7 +154,7 @@ social:
   Coding: https://coding.net/u/leolan
   Cloud: http://quickconnect.to/myleolan
   OSchina: https://git.oschina.net/leolan
-  常用链接: https://www.leolan.top/posts/44568/
+  Links: https://www.leolan.top/posts/44568/
   #Twitter: https://twitter.com/lmintlcx
   #Zhihu: http://www.zhihu.com/people/lmintlcx
   #Douban: http://www.douban.com/people/lmintlcx
