--- a/themes/next5.0.1/_config.yml
+++ b/themes/next5.0.1/_config.yml
@@ -246,7 +246,7 @@ auto_excerpt:
 
 # MathJax Support 数学公式
 mathjax:
-  enable: false
+  enable: true
   cdn: //cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
 #各种第三方服务
