--- a/_config.yml
+++ b/_config.yml
@@ -152,8 +152,9 @@ baidusitemap:
 social:
   GitHub: https://github.com/myleolan
   Coding: https://coding.net/u/leolan
-  Cloud: http://quickconnect.to/myleolan
+  Cloud1: http://quickconnect.to/myleolan
   OSchina: https://git.oschina.net/leolan
+  Cloud2: http://842632422-abc.eicp.net
   Links: https://www.leolan.top/posts/44568/
   #Twitter: https://twitter.com/lmintlcx
   #Zhihu: http://www.zhihu.com/people/lmintlcx
